# branching

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
examples/: cascaded_fix.py  parallel_speculation.py  race_models.py  simple_branch.py  speculate_fix.py
integration/: SKILL.md
integration/docker/: Dockerfile  branching-docker  docker-entrypoint.sh
src/branching/: __init__.py  exceptions.py
src/branching/agent/: patterns.py  result.py  speculate.py
src/branching/core/: base.py  branch.py  registry.py  workspace.py
src/branching/fs/: _mount.py  _syscalls.py  branchfs.py  daxfs.py
src/branching/memory/: __init__.py  _mprotect.py  base.py
src/branching/process/: __init__.py  _cgroup.py  _landlock.py  _namespace.py  _prlimit.py  _process_tracker.py  context.py  limits.py  runner.py
src/branching/process/bpf/: Makefile  branch_tracker.bpf.c
src/cli/: __init__.py  best_of_n.py  reflexion.py  run.py  speculate.py  status.py
tests/: test_branch.py  test_branchfs_backend.py  test_fork.py  test_integration.py  test_landlock.py  test_prlimit.py  test_process_branch.py  test_resource_limits.py  test_speculate.py  test_workspace.py  test_workspace_mount.py
