[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "BranchContext"
version = "0.1.0"
description = "Unified branching for speculative execution: filesystem, process, and memory"
requires-python = ">=3.10"
license = "Apache-2.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
