[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "BranchContext"
version = "0.1.1"
description = "Unified branching for speculative execution: filesystem, process, and memory"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Cong Wang", email = "cwang@multikernel.io" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/multikernel/branching"

[project.scripts]
branching = "cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
