[metadata]
name = branching
version = 0.1.1
description = Unified branching for speculative execution: filesystem, process, and memory
author = Cong Wang
author_email = cwang@multikernel.io
url = https://github.com/multikernel/branching
license = Apache-2.0

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    branching = cli:main
